# Digital-Picture-Frame

./: .gitignore  CMakeLists.txt  Digital_Picture_Frame.sh  README.md  digitalPictureFrame  digitalPictureFramePackageDependencies.sh  main
include/modules/: FileIterator.h  MovPlayer.h  VLCPlayer.h
src/: main.c
src/modules/: FileIterator.c  MovPlayer.c  VLCPlayer.c
test/modules/: VLCPlayerTest.c
